# Industry-Academia-Skill-Gap

./: .gitignore  ADMIN_SYSTEM_GUIDE.md  DYNAMIC_CONFIG_GUIDE.md  README.md  RUNNING_SERVICES.md  SERVICE_UPDATE_STATUS.md  SETUP_GUIDE.md  UNIFIED_BACKEND_GUIDE.md  UNIFIED_LAUNCHER_README.md  config_server.py  data_analysis_training_prep.py  fix_remaining_imports.py  main.py  pyproject.toml  requirements.txt  run_unified_backend.bat  run_unified_backend.ps1  test_all_backends.py  test_nipuni_backend.py
Advanced-Recommendation-System/: ANALYSIS_METRICS_EXPLANATION.md  ARCHITECTURE.md  CATEGORY_FIX.md  COMPLETE_EXPLANATION.md  HYBRID_RANKING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  export_desktop_to_csv.py  import_to_aura.py  main.py  requirements.txt
Agent-Runtime/: AI_EXPLAINER_INTEGRATION.md  CYPHER_QUERIES.md  EXAI_ARCHITECTURE.md  EXPLAINER_FIX.md  FRIENDLY_XAI_GUIDE.md  FRONTEND_INTEGRATION.md  JOB_GAP_PIPELINE.md  LABEL_BUILDER_QUICKREF.md  OCR_SETUP_GUIDE.md  QUICKSTART.md  QUICK_START_EXAI.md  QUICK_START_HF.md  RESEARCH_PAPER_COMPREHENSIVE.md  RUNNING_JOB_GAP_ENDPOINT.md  SHAP_EXPLANATIONS_ENHANCED.md  SKILL_GAP_FALSE_POSITIVE_FIX.md  UPDATE_IMPLEMENTATION_SUMMARY.md  XAI_FRIENDLY_COMPLETE.md  XAI_INTEGRATION.md  build_readiness_labels.py  fix_powerbi_manual.py  main.py  requirements.txt  setup_label_builder.py  test_pytorch.py  verify_readiness_labels.py
NewFrontend/: API_INTEGRATION_GUIDE.md  EXAI_COMPLETE_IMPLEMENTATION.md  EXAI_RUNTIME_INTEGRATION.md  EXAI_VISUAL_GUIDE.md  FIX_NPM_INSTALL.md  INTEGRATION_SUMMARY.md  INTERVIEW_PREP_INTEGRATION.md  PROFILE_ANALYSIS_INTEGRATION.md  SKILL_GAP_INTEGRATION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
NipuniFE/: .env example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js
Nipuni_backend/: API_READINESS_PREDICTION.md  QUICK_TEST_API.md  TASK_15_COMPLETION_REPORT.md  TASK_15_STATUS.md  fix_imports.py  fix_imports_corrected.py  requirements.txt  run_api.py  test_models_standalone.py  test_readiness_api.py
Thisaravi-Backend/: .gitignore  README.md  evolution_ui.py  input_normalizer.py  main.py  pyproject.toml  requirements.txt  test_integration_summary.py
Thisaravi-Backend/clients/: README.md  __init__.py  agent_runtime_client.py  integration_test.py  recommendation_client.py
Thisaravi-Backend/datasets/: augment_dataset.py  extract_real_seeds.py  generate_seeds.py  hf_uploader.py  real_seeds.jsonl  real_seeds_state.json  seeds.jsonl  smart_generator.py  student_advisor_dataset_v1_evolved_1.jsonl  student_advisor_dataset_v2_evolved_4.jsonl  student_advisor_dataset_v2_evolved_5.jsonl
Thisaravi-Backend/docs/: architecture.md  plan.md  progress.md  self_evolution_plan.md
Thisaravi-Backend/feedback/: analysis.py  pipeline.py  prompt_evolver.py  schemas.py  storage.py
Thisaravi-Backend/feedback/feedback_data/: expert_feedback.jsonl  model_outputs_log.jsonl  pattern_reports.jsonl  prompt_evolutions.jsonl
Thisaravi-Backend/models/: setup_models.ps1
Thisaravi-Backend/profiles/: storage.py
Thisaravi-frontend/: index.html  package-lock.json  package.json  vite.config.ts
login/: check_analysis_data.py  check_analysis_fields.py  check_google_connectivity.py  check_table.py  create_admin.py  (+9 more)
(+413 files in other folders)
