[project]
name = "ai-driven-project-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "alembic",
    "authlib",
    "chromadb",
    "cryptography",
    "datasets",
    "easyocr",
    "email-validator",
    "faiss-cpu",
    "fastapi",
    "google-api-core",
    "google-cloud-aiplatform",
    "google-genai",
    "httpx",
    "huggingface-hub",
    "joblib",
    "langchain",
    "langchain-google-genai",
    "matplotlib",
    "neo4j",
    "numpy",
    "ollama",
    "openai",
    "pandas",
    "passlib[bcrypt]",
    "pdf2image",
    "pdfplumber",
    "peft",
    "pillow",
    "pydantic",
    "pydantic-settings",
    "pymupdf",
    "pymysql",
    "pypdf2",
    "pytesseract",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "python-jose[cryptography]",
    "python-magic",
    "python-multipart",
    "requests",
    "scikit-learn",
    "seaborn",
    "sentence-transformers",
    "shap",
    "sqlalchemy",
    "streamlit",
    "torch",
    "torch-geometric",
    "tqdm",
    "transformers",
    "urllib3",
    "uvicorn[standard]",
    "watchdog",
    "xgboost",
]
