[project]
name = "ai-driven-project-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "fastapi>=0.129.0",
    "google-genai>=1.65.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.4.1",
    "neo4j>=6.1.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.41.0",
    "watchdog>=6.0.0",
]
